--- a/semantic_search.ipynb
+++ b/semantic_search.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOXrN2pBV5J6nH0CDgQR95p",
+      "authorship_tag": "ABX9TyP1fBdAhYJ7ntJAZwMEH8M6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "2xQ91b57Yz1-"
+        "id": "2xQ91b57Yz1-",
+        "outputId": "e3a7cb7a-e071-4f47-8c3f-cdfc34fa27e9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello\n"
+          ]
+        }
+      ],
+      "source": [
+        "print('Hello')"
+      ]
     }
   ]
 }
