--- a/LLMs.ipynb
+++ b/LLMs.ipynb
@@ -1,29 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4",
-      "mount_file_id": "1GNsIavLArUmfqjxXScr3-O4YBJb53cVE",
-      "authorship_tag": "ABX9TyMa+CikAfiA7na6Ft4h+QpJ",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Kenuuey/AI-tools/blob/main/LLMs.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -31,19 +12,16 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Mini Orca 3B"
-      ],
       "metadata": {
         "id": "v16Rdji5wJnI"
-      }
+      },
+      "source": [
+        "### Mini Orca 3B"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install --upgrade pip\n",
-        "!pip install -qqq langchain transformers accelerate sentencepiece gpt4all"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -51,11 +29,10 @@
         "id": "KaGPuCpswKiE",
         "outputId": "4dd608c5-d1e5-4ad3-9860-c07a6ddc91db"
       },
-      "execution_count": 23,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: pip in /usr/local/lib/python3.11/dist-packages (24.1.2)\n",
             "Collecting pip\n",
@@ -70,10 +47,21 @@
             "Successfully installed pip-25.2\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install --upgrade pip\n",
+        "!pip install -qqq langchain transformers accelerate sentencepiece gpt4all\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": true,
+        "id": "Fv_yaPDqwPo9"
+      },
+      "outputs": [],
       "source": [
         "!mkdir -p ./models/mini_orca_3b\n",
         "\n",
@@ -89,16 +77,15 @@
         "# Download configuration files\n",
         "!wget -O ./models/mini_orca_3b/config.json \"https://huggingface.co/pankajmathur/orca_mini_3b/resolve/main/config.json\"\n",
         "!wget -O ./models/mini_orca_3b/generation_config.json \"https://huggingface.co/pankajmathur/orca_mini_3b/resolve/main/generation_config.json\""
-      ],
-      "metadata": {
-        "collapsed": true,
-        "id": "Fv_yaPDqwPo9"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "4b1SUfZxwgjN"
+      },
+      "outputs": [],
       "source": [
         "from transformers import AutoTokenizer, AutoModelForCausalLM, pipeline\n",
         "\n",
@@ -108,20 +95,11 @@
         "model = AutoModelForCausalLM.from_pretrained(model_path, trust_remote_code=True, device_map=\"auto\")\n",
         "\n",
         "generator = pipeline(\"text-generation\", model=model, tokenizer=tokenizer)"
-      ],
-      "metadata": {
-        "id": "4b1SUfZxwgjN"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "prompt = \"Write a short 2-line poem about AI.\"\n",
-        "output = [generator](prompt, max_new_tokens=100)\n",
-        "print(output[0]['generated_text'])"
-      ],
+      "execution_count": 30,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -129,29 +107,26 @@
         "id": "Pnem_ydlwlAn",
         "outputId": "67a41a4d-48d8-4fb6-c3fd-928ef2fb9469"
       },
-      "execution_count": 30,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Write a short 2-line poem about AI.\n",
             "AI, still learning, always striving to improve.\n",
             "AI, vast and complex, still a mystery.\n"
           ]
         }
+      ],
+      "source": [
+        "prompt = \"Write a short 2-line poem about AI.\"\n",
+        "output = [generator](prompt, max_new_tokens=100)\n",
+        "print(output[0]['generated_text'])"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from langchain.llms import HuggingFacePipeline\n",
-        "\n",
-        "llm = HuggingFacePipeline(pipeline=generator)\n",
-        "\n",
-        "response = llm(\"Explain LangChain in one sentence.\")\n",
-        "print(response)"
-      ],
+      "execution_count": 31,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -159,11 +134,10 @@
         "id": "TGVx1M5gwm4z",
         "outputId": "38bc566a-252f-4897-bbfb-889ff0c90ba6"
       },
-      "execution_count": 31,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/tmp/ipython-input-3324905671.py:3: LangChainDeprecationWarning: The class `HuggingFacePipeline` was deprecated in LangChain 0.0.37 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFacePipeline``.\n",
             "  llm = HuggingFacePipeline(pipeline=pipe)\n",
@@ -172,17 +146,52 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Explain LangChain in one sentence.\n",
             "LangChain is a blockchain-based platform that enables secure and transparent communication between language partners.\n"
           ]
         }
+      ],
+      "source": [
+        "from langchain.llms import HuggingFacePipeline\n",
+        "\n",
+        "llm = HuggingFacePipeline(pipeline=generator)\n",
+        "\n",
+        "response = llm(\"Explain LangChain in one sentence.\")\n",
+        "print(response)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 32,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ssqcRxgfxwC2",
+        "outputId": "d0cd03bc-f4d6-4499-b56c-8fea335889cc"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Summarize this text in one sentence: LangChain is a Python framework that allows you to build applications using large language models easily.\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/tmp/ipython-input-540201409.py:9: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
+            "  chain = LLMChain(llm=llm, prompt=prompt)\n",
+            "/tmp/ipython-input-540201409.py:11: LangChainDeprecationWarning: The method `Chain.run` was deprecated in langchain 0.1.0 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
+            "  summary = chain.run(\"LangChain is a Python framework that allows you to build applications using large language models easily.\")\n"
+          ]
+        }
+      ],
       "source": [
         "from langchain.prompts import PromptTemplate\n",
         "from langchain.chains import LLMChain\n",
@@ -196,70 +205,48 @@
         "\n",
         "summary = chain.run(\"LangChain is a Python framework that allows you to build applications using large language models easily.\")\n",
         "print(summary)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ssqcRxgfxwC2",
-        "outputId": "d0cd03bc-f4d6-4499-b56c-8fea335889cc"
-      },
-      "execution_count": 32,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Summarize this text in one sentence: LangChain is a Python framework that allows you to build applications using large language models easily.\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/tmp/ipython-input-540201409.py:9: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
-            "  chain = LLMChain(llm=llm, prompt=prompt)\n",
-            "/tmp/ipython-input-540201409.py:11: LangChainDeprecationWarning: The method `Chain.run` was deprecated in langchain 0.1.0 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
-            "  summary = chain.run(\"LangChain is a Python framework that allows you to build applications using large language models easily.\")\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### OpenAI"
-      ],
       "metadata": {
         "id": "hxtkdFgs4gT9"
-      }
+      },
+      "source": [
+        "### OpenAI"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import os\n",
-        "from getpass import getpass"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "snN5nnGliN-h"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "from getpass import getpass"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# os.environ['OPENAI_API_KEY'] = getpass('Enter your OpenAI API key:')\n",
-        "# os.environ['OPENAI_API_KEY']"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "nyvKe6buhsLP"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# os.environ['OPENAI_API_KEY'] = getpass('Enter your OpenAI API key:')\n",
+        "# os.environ['OPENAI_API_KEY']"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "JZOb7HAPiqmp"
+      },
+      "outputs": [],
       "source": [
         "# from openai import OpenAI\n",
         "# client = OpenAI()\n",
@@ -270,15 +257,15 @@
         "# )\n",
         "\n",
         "# print(response.output_text)\n"
-      ],
-      "metadata": {
-        "id": "JZOb7HAPiqmp"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "unSUSdYigiNE"
+      },
+      "outputs": [],
       "source": [
         "# from langchain.llms import OpenAI\n",
         "\n",
@@ -286,15 +273,15 @@
         "\n",
         "# response = llm(\"Write a short poem about AI in 2 lines.\")\n",
         "# print(response)"
-      ],
-      "metadata": {
-        "id": "unSUSdYigiNE"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "6ibNKhe4gi9m"
+      },
+      "outputs": [],
       "source": [
         "# from langchain.prompts import PromptTemplate\n",
         "# from langchain.chains import LLMChain\n",
@@ -307,15 +294,15 @@
         "# text = \"LangChain helps you connect LLMs to APIs, databases, and workflows.\"\n",
         "# summary = chain.run(text)\n",
         "# print(summary)"
-      ],
-      "metadata": {
-        "id": "6ibNKhe4gi9m"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "2lCXxSYwhJ43"
+      },
+      "outputs": [],
       "source": [
         "# from langchain.memory import ConversationBufferMemory\n",
         "# from langchain.chains import ConversationChain\n",
@@ -326,15 +313,15 @@
         "\n",
         "# print(conversation.run(\"Hi, who are you?\"))\n",
         "# print(conversation.run(\"Can you summarize our chat so far?\"))"
-      ],
-      "metadata": {
-        "id": "2lCXxSYwhJ43"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "A5xrZwZzhNoE"
+      },
+      "outputs": [],
       "source": [
         "from langchain.agents import initialize_agent, Tool\n",
         "from langchain.agents import AgentType\n",
@@ -348,21 +335,16 @@
         "\n",
         "result = agent.run(\"Add 12 and 30\")\n",
         "print(result)\n"
-      ],
-      "metadata": {
-        "id": "A5xrZwZzhNoE"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Rand"
-      ],
       "metadata": {
         "id": "JrpGog6DwKz_"
-      }
+      },
+      "source": [
+        "### Rand"
+      ]
     },
     {
       "cell_type": "code",
@@ -378,6 +360,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {
+        "id": "nNQEp1iWvgOG"
+      },
+      "outputs": [],
       "source": [
         "from transformers import AutoTokenizer, AutoModelForCausalLM, pipeline\n",
         "\n",
@@ -388,34 +375,25 @@
         "\n",
         "# # Create a text-generation pipeline\n",
         "# generator = pipeline(\"text-generation\", model=model, tokenizer=tokenizer)"
-      ],
-      "metadata": {
-        "id": "nNQEp1iWvgOG"
-      },
-      "execution_count": 18,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from transformers import pipeline\n",
-        "\n",
-        "pipe = pipeline(\"text-generation\", model=\"pankajmathur/orca_mini_3b\")"
-      ],
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "id": "Cuoy7czetlbF"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from transformers import pipeline\n",
+        "\n",
+        "pipe = pipeline(\"text-generation\", model=\"pankajmathur/orca_mini_3b\")"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "prompt = \"Write a short 2-line poem about AI.\"\n",
-        "output = pipe(prompt, max_new_tokens=100)\n",
-        "print(output[0]['generated_text'])"
-      ],
+      "execution_count": 33,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -423,21 +401,30 @@
         "id": "_1O_zqDxwAzT",
         "outputId": "2bc009d7-548d-4703-d4a3-7d33c4e14bf7"
       },
-      "execution_count": 33,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Write a short 2-line poem about AI.\n",
             "AI is a machine, so complex and bright.\n",
             "It learns and adapts, and can do much more.\n"
           ]
         }
+      ],
+      "source": [
+        "prompt = \"Write a short 2-line poem about AI.\"\n",
+        "output = pipe(prompt, max_new_tokens=100)\n",
+        "print(output[0]['generated_text'])"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 37,
+      "metadata": {
+        "id": "zt82yIKNtAGF"
+      },
+      "outputs": [],
       "source": [
         "from langchain.llms import GPT4All\n",
         "\n",
@@ -447,12 +434,26 @@
         "# Test it\n",
         "response = llm(\"Write a short 2-line poem about AI.\")\n",
         "print(response)"
-      ],
-      "metadata": {
-        "id": "zt82yIKNtAGF"
-      },
-      "execution_count": 37,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "authorship_tag": "ABX9TyMa+CikAfiA7na6Ft4h+QpJ",
+      "gpuType": "T4",
+      "include_colab_link": true,
+      "mount_file_id": "1GNsIavLArUmfqjxXScr3-O4YBJb53cVE",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
