--- a/LangChain.ipynb
+++ b/LangChain.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1DCa_UhCjYk42cGkKmSDdlFmw_DG_omP6",
-      "authorship_tag": "ABX9TyMnMH8UCeM++ctNTr+3wSD/",
+      "authorship_tag": "ABX9TyNYrYkxiGnWW7+RKbozMHwp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -155,6 +155,84 @@
       "metadata": {
         "id": "n8XOl7MDD0ow"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from langchain.prompts import PromptTemplate\n",
+        "from langchain_huggingface import HuggingFaceEndpoint\n",
+        "from langchain.chains import LLMChain\n",
+        "\n",
+        "llm = HuggingFaceEndpoint(\n",
+        "    repo_id=\"deepseek-ai/DeepSeek-V3-0324\",\n",
+        "    task=\"conversational\",\n",
+        "    max_new_tokens=512,\n",
+        ")\n",
+        "\n",
+        "name_prompt = PromptTemplate(\n",
+        "    input_variables=[\"cuisine\"],\n",
+        "    template=\"I want to open a {cuisine} restaurant. Suggest a fancy name.\"\n",
+        ")\n",
+        "name_chain = LLMChain(llm=llm, prompt=name_prompt)\n",
+        "\n",
+        "menu_prompt = PromptTemplate(\n",
+        "    input_variables=[\"restaurant_name\"],\n",
+        "    template=\"The restaurant name is {restaurant_name}. Suggest some menu items.\"\n",
+        ")\n",
+        "menu_chain = LLMChain(llm=llm, prompt=menu_prompt)\n",
+        "\n",
+        "restaurant_name = name_chain.invoke({\"cuisine\": \"Arabic\"})\n",
+        "menu_items = menu_chain.invoke({\"restaurant_name\": restaurant_name})\n",
+        "\n",
+        "print(\"Restaurant name:\", restaurant_name)\n",
+        "print(\"Menu items:\", menu_items)"
+      ],
+      "metadata": {
+        "id": "dBWocFq3UDIk"
+      },
+      "execution_count": 110,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 3"
+      ],
+      "metadata": {
+        "id": "hNr4GipwX3A1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install wikipedia"
+      ],
+      "metadata": {
+        "id": "1bVpregWYOoZ"
+      },
+      "execution_count": 116,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from langchain.agents import AgentType, initialize_agent, load_tools\n",
+        "\n",
+        "tools = load_tools(['wikipedia', 'llm-math'], llm=llm)\n",
+        "\n",
+        "agent = initialize_agent(\n",
+        "    tools,\n",
+        "    llm,\n",
+        "    agent=AgentType.ZERO_SHOT_REACT_DESCRIPTION\n",
+        ")\n",
+        "\n",
+        "agent.run(\"When was Elon Musk born? What is his age right now in 2025?\")"
+      ],
+      "metadata": {
+        "id": "wCyb33LIX3hN"
+      },
+      "execution_count": 115,
+      "outputs": []
     }
   ]
 }
